--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Outfit:wght@400;600;700&family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="icon" href="%sveltekit.assets%/logo.svg" />
+		<link rel="icon" href="%sveltekit.assets%/logo1.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
