--- a/src/app.html
+++ b/src/app.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8" />
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Outfit:wght@400;600;700&family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="icon" href="%sveltekit.assets%/logo1.png" />
+		<link rel="icon" href="%sveltekit.assets%/logo1.webp" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-gradient-to-r from-background-2 to-background-1 dark:from-primary-700 dark:to-secondary-900 text-gray-900 dark:text-gray-100 transition-full">
+	<body data-sveltekit-preload-data="hover" class="bg-gradient-to-br from-gray-50 to-background-2 dark:from-primary-700 dark:to-secondary-900 text-gray-900 dark:text-gray-100 transition-full">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
