--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-gradient-to-br from-gray-50 to-background-2 dark:from-primary-700 dark:to-secondary-900 text-gray-900 dark:text-gray-100 transition-full">
+	<body data-sveltekit-preload-data="hover" class="bg-gradient-to-br from-background-2 to-gray-50 dark:from-primary-700 dark:to-secondary-900 text-gray-900 dark:text-gray-100 transition-full">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
